--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,42 +1,47 @@
-<h1>Eat-Da-Burger!</h1>
 
-<main>
-  <div class="container">
-    <div class="row">
-      <div class="col s6">
-        {{#each burgers}}
-          {{#unless this.devoured}}
-            <div>
-              <form action="/burgers/{{this.id}}?_method=PUT" method="POST">
-                <button type="submit" class='burgerAvailable'> {{this.burger_name}}</button>
-              </form>
-            </div>
-          {{/unless}}
-        {{/each}}
-      </div>
+<div class="container">
 
-      <div class="col s6">
-        {{#each burgers}}
-          {{#if this.devoured}}
-            <div class='burgerEaten'>
-              <div>
-                {{this.burger_name}}
-              </div>
-            </div>
-          {{/if}}
-        {{/each}}
-      </div>
+     <div class="jumbotron">
+        <div id="burger-image">
+            <img src="/assets/images/eat-da-burger.jpg"></img>
+        </div>
+        <h1>Eat-Da-Burger!</h1>
     </div>
-  </div>
-</main>
+    
+     <div class="row">
+        <div class="col-sm-6">
+            {{#each burgers}}
+                {{#unless devoured}}
+                    <span class="border border-primary" id="burger-list">
+                        {{ id}}.
+                        {{  burger_name}}
+                    </span>
+                    <button class="devour-burger" data-id="{{this.id}}">Devour It!</button>
+                    <br><br>
+                {{/unless}}
+            {{/each}}
+        </div>
+        <div class="col-sm-6">
+            {{#each burgers}}
+                {{#if devoured}}
+                    <span class="border border-primary" id="burger-list">
+                        {{ id}}.
+                        {{  burger_name}}
+                    </span>
+                    <br><br>
+                {{/if}}
+            {{/each}}
+        </div>
+    </div>
 
-<h2>Add A Burger Option</h2>
-
-<div class="row">
-  <div class="col s12">
-    <form action="/burgers" method="POST">
-      <input type="text" id="name" name="burger_name" placeholder="Uber Delicious Burger">
-      <button type="submit" class="addBurgerButton">Add The Burger</button>
+    <form class="create-form">
+        <div class="form-group">
+            <input type="text" class="form-control" id="new-burger" name="name"></input><br>
+            <button type="submit" class="btn btn-primary addBurger">Submit</button><br>
+            <br>
+            <h5>Enter a burger you want to eat. Click the 'Submit button.</h5>
+        </div>
     </form>
-  </div>
 </div>
+<br><br>
+
