--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Eat-Da-Burger</title>
 	<meta charset="UTF-8">
-
-	<link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Fontdiner+Swanky" rel="stylesheet">
-
-	<!-- Compiled and minified Materialize CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-	<title>Burgerlicious Devour Menu</title>
-</head>
-
-<body>
-	<img src="/assets/img/cute_burger.jpeg" width="400px" id="cute_burger">
-
-	{{{ body }}}
-
-	<footer class="burgerFooter">
-		<div class="footer-copyright">
-			<div class="container">
-				<span class="grey-text text-lighten-4">© 2017 angrbrd entertainment</span>
-				<a class="grey-text text-lighten-4 right" href="https://github.com/angrbrd">Reference Work</a>
-			</div>
-		</div>
-	</footer>
-</body>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="/assets/js/burgers.js"></script>
+	
+    </head>
+	<body>
+		{{{ body }}}
+	</body>
 </html>
